# Age-Calculator

./: README.md
age-calculator/: README.md  pyproject.toml
age-calculator/Resorces/: styles.qss
age-calculator/age_calculator/: app.py
